gl31-master/src/test/deca/context/valid/sansobjet/int_operation.deca
// Description:
//    Opérations : entre un int et un int
//
// Resultats:
//    Succes : Types compatibles, opérations autorisées
//
// Historique:
//    cree le 13/01/2021

{
    int a, b, c;

    // Doit etre accepte.
    a = b+c;
    b = c-a;
    c = b*a;
    a = b/a;
    b = c%b;
}

