gl31-master/src/test/deca/context/invalid/sansobjet/affect_void_boolean.deca
// Description:
//    Affectation et typage : associe un void a un boolean
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 08/01/2021

{
   boolean a;
   void b;

   // Doit etre refuse.
   a = b;
}
